@@ -256,7 +256,9 @@ resource belongs to \\
 
 \hline
 
-\texttt{DOCUMENT\_ROOT} & base directory of the site \\
+\texttt{DOCUMENT\_ROOT} & base directory of the site; may also be
+passed after a \texttt{CGI} command, to set the document root only for
+this CGI \\
 
 \hline
 
