@@ -521,6 +521,7 @@ translate_handle_packet(struct translate_client *client,
         client->resource_address->type = RESOURCE_ADDRESS_CGI;
         memset(&client->resource_address->u.cgi, 0, sizeof(client->resource_address->u.cgi));
         client->resource_address->u.cgi.path = payload;
+        client->resource_address->u.cgi.document_root = client->response.document_root;
         break;
 
     case TRANSLATE_FASTCGI:
@@ -601,7 +602,11 @@ translate_handle_packet(struct translate_client *client,
         break;
 
     case TRANSLATE_DOCUMENT_ROOT:
-        client->response.document_root = payload;
+        if (client->resource_address == NULL ||
+            client->resource_address->type != RESOURCE_ADDRESS_CGI)
+            client->response.document_root = payload;
+        else
+            client->resource_address->u.cgi.document_root = payload;
         break;
 
     case TRANSLATE_ADDRESS:
