@@ -2,6 +2,7 @@ cm4all-beng-proxy (0.4.9) unstable; urgency=low
 
   * http-cache: explicitly start reading into cache
   * cgi: clear "headers" variable before publishing the response
+  * translate: use DOCUMENT_ROOT as CGI parameter
 
  --
 
